CHORE: update some Todo entity fields to non-nullable
jira ref: ##S12P11A209-161